# vocabulary

./: Cargo.toml  test.csv  w.csv
src/: main.rs  voca.rs
