[package]
name = "voca"
version = "0.1.0"
authors = ["iseongbin <lsb918@uos.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = "0.11"
tokio = {version = "1", features = ["full"]}
serde_json = "1.0"
regex = "0.2"